# AnalyzeFinAI

./: .env.example  .gitignore  FIXES.md  Makefile  README.md  pyproject.toml
.github/agents/: implementer.agent.md  reviewer.agent.md
.github/instructions/: analyzers.instructions.md  financial.instructions.md  maf-agents.instructions.md  python-models.instructions.md  readme.instructions.md  tests.instructions.md  ui.instructions.md
.github/prompts/: add-analyzer.prompt.md  add-converter.prompt.md  generate-tests.prompt.md  run-analysis.prompt.md
app/: __main__.py  config.py  exceptions.py
app/agents/: _client.py  analyst_agent.py  orchestrator_agent.py  reviewer_agent.py
app/analyzers/: __init__.py  base.py  comparison.py  financial.py  summary.py  universal.py
app/api/: main.py
app/audit/: __init__.py  logger.py
app/chunking/: __init__.py  chunker.py
app/conversion/: __init__.py  base.py  local_converter.py  markitdown_converter.py  mcp_converter.py
app/financial/: __init__.py  calculator.py  extractor.py
app/ingestion/: __init__.py  detector.py  document_loader.py  loader.py  validator.py
app/llm/: factory.py  local_provider.py  prompt_templates.py  provider.py
app/models/: __init__.py  analysis.py  audit.py  document.py  financial.py
app/reporting/: writer.py
app/routing/: __init__.py  prompts.py  router.py
app/storage/: base.py  filesystem.py
app/ui/: devui_app.py
app/validation/: __init__.py  validator.py
data/: .gitkeep
docker/: Dockerfile  docker-compose.yml
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+42 files in other folders)
