[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analizer-ai"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "agent-framework>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "typer>=0.12",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "markitdown>=0.0.2",
]

[project.optional-dependencies]
local = [
    "transformers>=4.40",
    "accelerate>=0.30",
    "huggingface_hub>=0.23",
    "torch>=2.2",
]
dev = [
    "agent-framework-devui>=1.0.0b0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
